project is running with interrupts from user button, every possible status is led_coded onto the four leds

--- a/test_discovery_led.ioc
+++ b/test_discovery_led.ioc
@@ -8,18 +8,20 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PD12
-Mcu.Pin1=PD13
-Mcu.Pin2=PD14
-Mcu.Pin3=PD15
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.PinsNb=5
+Mcu.Pin0=PA0-WKUP
+Mcu.Pin1=PD12
+Mcu.Pin2=PD13
+Mcu.Pin3=PD14
+Mcu.Pin4=PD15
+Mcu.Pin5=VP_SYS_VS_Systick
+Mcu.PinsNb=6
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
 MxCube.Version=4.19.0
 MxDb.Version=DB.4.0.190
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
+NVIC.EXTI0_IRQn=true\:1\:0\:true\:true\:true\:1
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
@@ -28,6 +30,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=PUSHBUTTON_INTERRUPT
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPXTI0
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407V(E-G)Tx
@@ -110,6 +116,8 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=test_discovery_led
