--- a/test_discovery_led.ioc
+++ b/test_discovery_led.ioc
@@ -5,7 +5,8 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP3=TIM14
+Mcu.IPNb=4
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA0-WKUP
@@ -14,7 +15,8 @@ Mcu.Pin2=PD13
 Mcu.Pin3=PD14
 Mcu.Pin4=PD15
 Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.PinsNb=6
+Mcu.Pin6=VP_TIM14_VS_ClockSourceINT
+Mcu.PinsNb=7
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
 MxCube.Version=4.19.0
@@ -29,6 +31,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
+NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=PUSHBUTTON_INTERRUPT
@@ -95,7 +98,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=C\:\\Users\\mat25\\git\\test_discovery_led
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_TIM14_Init-TIM14-false-HAL
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -118,6 +121,11 @@ RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
+TIM14.IPParameters=Prescaler,Period
+TIM14.Period=1000
+TIM14.Prescaler=8000
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 board=test_discovery_led
